--- a/force-app/main/default/lwc/getPendingprocess/getPendingprocess.html
+++ b/force-app/main/default/lwc/getPendingprocess/getPendingprocess.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="Pending Aprovals" icon-name="custom:custom63">
         <div class="slds-m-around_medium">
-     <p>Hello {UserName.data} ! </p>
+     <p>Hello, {UserName.data} ! </p>
      <p>You have {PendingList.data} item to approve today!</p>
      <lightning-button variant="brand" label="Go to approvals page" title=navigateNext onclick={navigateToApprovalRequestPage}></lightning-button>
         </div>
