--- a/force-app/main/default/lwc/getPendingprocess/getPendingprocess.html
+++ b/force-app/main/default/lwc/getPendingprocess/getPendingprocess.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Pending Aprovals" icon-name="custom:custom63">
+    <lightning-card title="Pending approvals" icon-name="custom:custom63">
         <div class="slds-m-around_medium">
      <p>Hello, {UserName.data} ! </p>
      <p>You have {PendingList.data} item to approve today!</p>
